manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodesy-deployment
  labels:
    app: nodesy-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodesy-app
  template:
    metadata:
      labels:
        app: nodesy-app
    spec:
      containers:
      - name: nodesy-container
        image: CONTAINER_IMAGE
        ports:
        - containerPort: 3000
        

---

apiVersion: v1
kind: Service
metadata:
  name: nodesy-service
spec:
  selector:
    app: nodesy-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
